[gd_scene load_steps=69 format=2]

[ext_resource path="res://actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://actors/shared/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/shared/FlashManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/shared/physics_managers/grounded_physics_manager.gd" type="Script" id=4]
[ext_resource path="res://actors/player/textures/character-spritesheet.png" type="Texture" id=5]
[ext_resource path="res://actors/player/textures/zzz.png" type="Texture" id=6]
[ext_resource path="res://actors/player/camera.gd" type="Script" id=7]
[ext_resource path="res://actors/player/states/idle.gd" type="Script" id=8]
[ext_resource path="res://actors/player/states/walk.gd" type="Script" id=9]
[ext_resource path="res://actors/player/states/jump.gd" type="Script" id=10]
[ext_resource path="res://actors/player/states/double_jump.gd" type="Script" id=11]
[ext_resource path="res://actors/player/states/fall.gd" type="Script" id=12]
[ext_resource path="res://actors/player/states/dash.gd" type="Script" id=13]
[ext_resource path="res://actors/player/states/wall_slide.gd" type="Script" id=14]
[ext_resource path="res://actors/player/states/wall_jump.gd" type="Script" id=15]
[ext_resource path="res://actors/player/states/grapple_rope_launch.gd" type="Script" id=16]
[ext_resource path="res://actors/player/states/grapple_swing.gd" type="Script" id=17]
[ext_resource path="res://actors/player/states/knockback.gd" type="Script" id=18]
[ext_resource path="res://actors/player/states/hazard_hit.gd" type="Script" id=19]
[ext_resource path="res://actors/player/states/hazard_recover.gd" type="Script" id=20]
[ext_resource path="res://actors/player/states/rest.gd" type="Script" id=21]
[ext_resource path="res://actors/player/effects/WallSlideTrail.tscn" type="PackedScene" id=22]
[ext_resource path="res://actors/player/wall_proximity_detector.gd" type="Script" id=23]
[ext_resource path="res://shared/effects/DustPuff.tscn" type="PackedScene" id=24]
[ext_resource path="res://actors/player/effects/DashPuff.tscn" type="PackedScene" id=25]
[ext_resource path="res://actors/player/jump_manager.gd" type="Script" id=26]
[ext_resource path="res://actors/player/textures/grapple-rope.png" type="Texture" id=27]
[ext_resource path="res://actors/player/textures/grapple-hook.png" type="Texture" id=28]
[ext_resource path="res://actors/player/states/walk_to_point.gd" type="Script" id=29]
[ext_resource path="res://actors/player/states/hard_landing.gd" type="Script" id=30]
[ext_resource path="res://custom/nodes/Stopwatch.tscn" type="PackedScene" id=31]
[ext_resource path="res://actors/player/dash_manager.gd" type="Script" id=32]
[ext_resource path="res://actors/shared/physics_managers/PhysicsManager.tscn" type="PackedScene" id=33]
[ext_resource path="res://actors/player/effects/DashEchoes.tscn" type="PackedScene" id=34]
[ext_resource path="res://actors/player/states/play_light_lamp_animation.gd" type="Script" id=35]
[ext_resource path="res://actors/player/states/player_state_sequence.gd" type="Script" id=36]
[ext_resource path="res://actors/player/states/face_object.gd" type="Script" id=37]
[ext_resource path="res://actors/player/states/attack.gd" type="Script" id=38]
[ext_resource path="res://actors/player/states/attack_up.gd" type="Script" id=39]
[ext_resource path="res://actors/player/attack_manager.gd" type="Script" id=40]
[ext_resource path="res://actors/player/effects/player_hit_effect/PlayerHitEffect.tscn" type="PackedScene" id=41]
[ext_resource path="res://actors/player/states/hit.gd" type="Script" id=42]

[sub_resource type="Animation" id=1]
resource_name = "attack_1"
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Hitboxes/SideAttack/CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "disabled", false ],
"method": "set_deferred"
}, {
"args": [ "disabled", true ],
"method": "set_deferred"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack_2"
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Hitboxes/SideAttack/CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "disabled", false ],
"method": "set_deferred"
}, {
"args": [ "disabled", true ],
"method": "set_deferred"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_3"
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Hitboxes/SideAttack/CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "disabled", false ],
"method": "set_deferred"
}, {
"args": [ "disabled", true ],
"method": "set_deferred"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Hitboxes/UpAttack/CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "disabled", false ],
"method": "set_deferred"
}, {
"args": [ "disabled", true ],
"method": "set_deferred"
} ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=7]
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("States/Grapple/GrappleRopeLaunch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.09, 0.24 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "draw_grapple_rope"
}, {
"args": [  ],
"method": "clear_grapple_rope"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GrappleRope:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.09, 0.13, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("States/Grapple/GrappleRopeLaunch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.09, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "draw_grapple_rope"
}, {
"args": [  ],
"method": "clear_grapple_rope"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GrappleRope:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.09, 0.13, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 59, 58, 57 ]
}

[sub_resource type="Animation" id=10]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 22, 21 ]
}

[sub_resource type="Animation" id=11]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 64, 65 ]
}

[sub_resource type="Animation" id=12]
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1.3, 1.35, 1.4, 1.45, 1.55, 1.6, 1.65, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79, 76, 77, 78, 79 ]
}

[sub_resource type="Animation" id=13]
length = 1.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 3, 2, 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "idle_low_health"
length = 1.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 7, 6, 5 ]
}

[sub_resource type="Animation" id=15]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 17, 18 ]
}

[sub_resource type="Animation" id=16]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 86, 87 ]
}

[sub_resource type="Animation" id=17]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 73, 72 ]
}

[sub_resource type="Animation" id=18]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 81 ]
}

[sub_resource type="Animation" id=19]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 83, 84, 85, 84 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Zzz:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=20]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 64, 65 ]
}

[sub_resource type="Animation" id=21]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=22]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 4, 6 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 18, 7 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 7, 16 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 4
script = ExtResource( 1 )

[node name="Health" parent="." instance=ExtResource( 2 )]

[node name="PhysicsManager" parent="." instance=ExtResource( 33 )]
script = ExtResource( 4 )
movement_speed_tiles_per_second = 6.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_1 = SubResource( 1 )
anims/attack_2 = SubResource( 2 )
anims/attack_3 = SubResource( 3 )
anims/attack_up = SubResource( 4 )
anims/dash = SubResource( 5 )
anims/fall = SubResource( 6 )
anims/grapple_launch_long = SubResource( 7 )
anims/grapple_launch_short = SubResource( 8 )
anims/grapple_pull = SubResource( 9 )
anims/hard_landing = SubResource( 10 )
anims/hazard_hit = SubResource( 11 )
anims/hazard_recover = SubResource( 12 )
anims/idle = SubResource( 13 )
anims/idle_low_health = SubResource( 14 )
anims/jump = SubResource( 15 )
anims/light_lamp = SubResource( 16 )
anims/pre_rest = SubResource( 17 )
anims/rest = SubResource( 18 )
anims/sleep = SubResource( 19 )
anims/stagger = SubResource( 20 )
anims/walk = SubResource( 21 )
anims/wall_slide = SubResource( 22 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 5 )
vframes = 11
hframes = 8
frame = 1
region_enabled = true
region_rect = Rect2( 0, 0, 640, 880 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Zzz" type="Sprite" parent="." groups=[
"mirror_y_axis",
]]
visible = false
position = Vector2( 10, -20 )
texture = ExtResource( 6 )
hframes = 3
region_enabled = true
region_rect = Rect2( 0, 0, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 23 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 320

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, -6.5 )
shape = SubResource( 24 )

[node name="CameraAnchor" type="Position2D" parent="." groups=[
"mirror_y_axis",
]]

[node name="Camera2D" type="Camera2D" parent="CameraAnchor"]
current = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 7 )

[node name="PositionTween" type="Tween" parent="CameraAnchor/Camera2D"]

[node name="Hitboxes" type="Node2D" parent="."]

[node name="SideAttack" type="Area2D" parent="Hitboxes" groups=[
"mirror_y_axis",
]]
position = Vector2( 18, -8 )
collision_layer = 16
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitboxes/SideAttack"]
shape = SubResource( 25 )
disabled = true

[node name="UpAttack" type="Area2D" parent="Hitboxes"]
collision_layer = 16
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitboxes/UpAttack"]
position = Vector2( 0, -28 )
shape = SubResource( 26 )
disabled = true

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Walk" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Jump" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="DoubleJump" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="Fall" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="FallTimeStopwatch" parent="States/Fall" instance=ExtResource( 31 )]

[node name="CoyoteTimer" type="Timer" parent="States/Fall"]

[node name="Dash" type="Node" parent="States"]
script = ExtResource( 13 )

[node name="DashDurationTimer" type="Timer" parent="States/Dash"]

[node name="WallSlide" type="Node" parent="States"]
script = ExtResource( 14 )

[node name="WallJump" type="Node" parent="States"]
script = ExtResource( 15 )

[node name="FixedVelocityTimer" type="Timer" parent="States/WallJump"]

[node name="JumpCutTimer" type="Timer" parent="States/WallJump"]

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 38 )

[node name="AttackUp" type="Node" parent="States"]
script = ExtResource( 39 )

[node name="Grapple" type="Node" parent="States"]
script = ExtResource( 36 )

[node name="GrappleRopeLaunch" type="Node" parent="States/Grapple"]
script = ExtResource( 16 )

[node name="GrappleSwing" type="Node" parent="States/Grapple"]
script = ExtResource( 17 )

[node name="Stagger" type="Node" parent="States"]
script = ExtResource( 36 )

[node name="Hit" type="Node" parent="States/Stagger"]
script = ExtResource( 42 )

[node name="FlashManager" parent="States/Stagger/Hit" instance=ExtResource( 3 )]
sprite_path = NodePath("../../../../Sprite")
total_duration = 1.2
flash_color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Knockback" type="Node" parent="States/Stagger"]
script = ExtResource( 18 )

[node name="KnockbackDurationTimer" type="Timer" parent="States/Stagger/Knockback"]

[node name="HazardHit" type="Node" parent="States"]
script = ExtResource( 19 )

[node name="FlashManager" parent="States/HazardHit" instance=ExtResource( 3 )]
sprite_path = NodePath("../../../Sprite")
flash_color = Color( 1, 0.309804, 0.470588, 1 )

[node name="HazardRecover" type="Node" parent="States"]
script = ExtResource( 20 )

[node name="LightLamp" type="Node" parent="States"]
script = ExtResource( 36 )

[node name="WalkToPoint" type="Node" parent="States/LightLamp"]
script = ExtResource( 29 )

[node name="FaceObject" type="Node" parent="States/LightLamp"]
script = ExtResource( 37 )

[node name="PlayLightLampAnimation" type="Node" parent="States/LightLamp"]
script = ExtResource( 35 )

[node name="RestAtLamp" type="Node" parent="States"]
script = ExtResource( 36 )

[node name="WalkToPoint" type="Node" parent="States/RestAtLamp"]
script = ExtResource( 29 )

[node name="FaceObject" type="Node" parent="States/RestAtLamp"]
script = ExtResource( 37 )

[node name="Rest" type="Node" parent="States/RestAtLamp"]
script = ExtResource( 21 )

[node name="RestingTimer" type="Timer" parent="States/RestAtLamp/Rest"]

[node name="ReadSign" type="Node" parent="States"]
script = ExtResource( 36 )

[node name="WalkToPoint" type="Node" parent="States/ReadSign"]
script = ExtResource( 29 )

[node name="FaceObject" type="Node" parent="States/ReadSign"]
script = ExtResource( 37 )

[node name="HardLanding" type="Node" parent="States"]
script = ExtResource( 30 )

[node name="WallSlideTrail" parent="." groups=[
"mirror_y_axis",
] instance=ExtResource( 22 )]
show_behind_parent = true
position = Vector2( 5, -10 )
emitting = false

[node name="DustPuff" parent="." instance=ExtResource( 24 )]

[node name="DashEchoes" parent="." instance=ExtResource( 34 )]
position = Vector2( 0, -8 )

[node name="DashPuff" parent="." instance=ExtResource( 25 )]
show_behind_parent = true
position = Vector2( 0, -8 )

[node name="PlayerHitEffect" parent="." instance=ExtResource( 41 )]

[node name="WallProximityDetector" type="Node2D" parent="."]
script = ExtResource( 23 )

[node name="TopFront" type="RayCast2D" parent="WallProximityDetector"]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 4

[node name="BottomFront" type="RayCast2D" parent="WallProximityDetector"]
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 4

[node name="TopBack" type="RayCast2D" parent="WallProximityDetector"]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 4

[node name="BottomBack" type="RayCast2D" parent="WallProximityDetector"]
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 4

[node name="GrappleRope" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -1, -8 )
width = 16.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 27 )
texture_mode = 1

[node name="GrappleHook" type="Sprite" parent="."]
visible = false
texture = ExtResource( 28 )

[node name="GrappleLineOfSight" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 4

[node name="FloorProximityDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0.5 )
collision_mask = 4

[node name="JumpManager" type="Node2D" parent="."]
script = ExtResource( 26 )

[node name="JumpBufferRaycast" type="RayCast2D" parent="JumpManager"]
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 260

[node name="DashManager" type="Node2D" parent="."]
script = ExtResource( 32 )

[node name="DashBufferRaycast" type="RayCast2D" parent="DashManager"]
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 260

[node name="DashCooldown" type="Timer" parent="DashManager"]

[node name="Attackmanager" type="Node2D" parent="."]
script = ExtResource( 40 )

[node name="AttackComboTimer" type="Timer" parent="Attackmanager"]

[node name="AttackCooldownTimer" type="Timer" parent="Attackmanager"]
